[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/battle/components/ArmyButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/battle/components/ArmyActionBar.gd" type="Script" id=2]

[node name="ArmyActionBar" type="HBoxContainer"]
anchor_right = 1.0
custom_constants/separation = 5
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" parent="." instance=ExtResource( 1 )]
margin_left = 23.0
margin_right = 71.0

[node name="Button2" parent="." instance=ExtResource( 1 )]
margin_left = 76.0
margin_right = 124.0

[node name="Button3" parent="." instance=ExtResource( 1 )]
margin_left = 129.0
margin_right = 177.0

[node name="Button4" parent="." instance=ExtResource( 1 )]
margin_left = 182.0
margin_right = 230.0

[node name="Button5" parent="." instance=ExtResource( 1 )]
margin_left = 235.0
margin_right = 283.0

[node name="Button6" parent="." instance=ExtResource( 1 )]
margin_left = 288.0
margin_right = 336.0

[connection signal="toggled" from="Button1" to="." method="_on_Button1_toggled"]
[connection signal="toggled" from="Button2" to="." method="_on_Button2_toggled"]
[connection signal="toggled" from="Button3" to="." method="_on_Button3_toggled"]
[connection signal="toggled" from="Button4" to="." method="_on_Button4_toggled"]
[connection signal="toggled" from="Button5" to="." method="_on_Button5_toggled"]
[connection signal="toggled" from="Button6" to="." method="_on_Button6_toggled"]
